# outlines-core

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  RELEASE.md  environment.yml  flake.nix  pyproject.toml  rustfmt.toml  setup.cfg  setup.py  shell.nix
.github/actions/bump_version/: action.yml  cargo_version_bumper.py
.github/workflows/: build_wheels.yml  dry_run_publish.yml  publish.yml  release_pypi.yaml  release_rust.yaml  tests.yml
benchmarks/: __init__.py  asv.conf.json  bench_json_schema.py  bench_kernels.py  bench_regex_guide.py  bench_torch_e2e.py
outlines_core/: __init__.py  json_schema.py
outlines_core/kernels/: __init__.py  mlx.py  numpy.py  torch.py
python/outlines_core/: __init__.py  __init__.pyi
python/outlines_core/fsm/: __init__.py  guide.py  json_schema.py  outlines_core_rs.pyi  regex.py
src/: error.rs  index.rs  lib.rs  prelude.rs  primitives.rs  regex.rs
src/json_schema/: mod.rs  parsing.rs  types.rs
src/python_bindings/: mod.rs
src/vocabulary/: locator.rs  mod.rs  processor.rs
tests/: test_guide.py  test_index.py  test_json_schema.py  test_kernels.py  test_statistical.py  test_vocabulary.py
tests/fsm/: test_guide.py  test_index.py  test_json_schema.py  test_regex.py  test_serialization.py  test_statistical.py  test_vocabulary.py
