[package]
name = "outlines-core"
version = "0.0.0"
edition = "2021"
description = "Structured Generation"
license = "Apache-2.0"
repository = "https://github.com/dottxt-ai/outlines-core"
rust-version = "1.71.1"

[dependencies]
once_cell = "1.20"
thiserror = "2.0"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
regex = "1.10.6"
serde-pyobject = { version = "0.5.0", optional = true }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = {version = "1.0", features = ["derive"]}
bincode = "2.0.0-rc.3"
rustc-hash = "2.1.0"
regex-automata = "0.4.9"

# Below are fragile dependencies, even minor updates of which often break the code
[dependencies.hf-hub]
version = "=0.4.1"
features = ["ureq", "rustls-tls"]
default-features = false

[dependencies.tokenizers]
git = "https://github.com/huggingface/tokenizers.git"
# This is a version > 0.21.0 before 0.21.1, we're looking for rustls-tls feature
# Once released could be pinned to 0.21.1+
rev = "4f1a810aa258d287e6936315e63fbf58bde2a980"
features = ["http", "rustls-tls"]

[features]
python-bindings = ["pyo3", "serde-pyobject"]

[lib]
name = "outlines_core"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[[bin]]
name = "convert-json-schema"
test = false
bench = false
