[package]
name = "outlines-core"
version = "0.0.0"
edition = "2021"
description = "Structured Generation"
license = "Apache-2.0"
repository = "https://github.com/dottxt-ai/outlines-core"
rust-version = "1.85.0"

[dependencies]
once_cell = "1.20"
thiserror = "2.0"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
regex = "1.10.6"
serde-pyobject = { version = "0.6.1", optional = true }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = {version = "1.0", features = ["derive"]}
bincode = "2.0.1"
rustc-hash = "2.1.0"
regex-automata = "0.4.9"

# Below are fragile dependencies, even minor updates of which often break the code
[dependencies.hf-hub]
version = "=0.4.1"
features = ["ureq", "rustls-tls"]
default-features = false
optional = true

[dependencies.tokenizers]
version = "=0.21.1"
features = ["onig"]
default-features = false

[features]
default = ["hugginface-hub"]
python-bindings = ["pyo3", "serde-pyobject"]
hugginface-hub = ["hf-hub", "tokenizers/http",  "tokenizers/rustls-tls"]

[lib]
name = "outlines_core"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[[bin]]
name = "convert-json-schema"
test = false
bench = false
